--- a/ProyectoTienda/templates/core/base.html
+++ b/ProyectoTienda/templates/core/base.html
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- CSS externo -->
-  <link href="{% static 'core/css/styles.css' %}" rel="stylesheet">
+  <link href="{% static 'core/css/styles_v2.css' %}" rel="stylesheet">
 
   {% block css %}{% endblock %}
 </head>
