--- a/ProyectoTienda/templates/usuarios/admin/perfil_admin.html
+++ b/ProyectoTienda/templates/usuarios/admin/perfil_admin.html
@@ -29,6 +29,16 @@
           <h3>👤 Gestionar Usuarios</h3>
         </a>
       </div>
+      <div class="col-md-4">
+        <a href="{% url 'reporte_pedidos_excel' %}" class="card shadow-sm text-center p-4 admin-card">
+          <h3>🧾Generar Reporte Excel</h3>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="{% url 'reporte_pedidos_pdf' %}" class="card shadow-sm text-center p-4 admin-card">
+          <h3>🧾 Generar Reporte PDF</h3>
+        </a>
+      </div>
     </div>
   </div>
 </section>
