--- a/ProyectoTienda/templates/core/base.html
+++ b/ProyectoTienda/templates/core/base.html
@@ -90,7 +90,7 @@
           <ul class="list-unstyled">
             <li><a href="#" class="text-white text-decoration-none">Inicio</a></li>
             <li><a href="#" class="text-white text-decoration-none">Productos</a></li>
-            <li><a href="#" class="text-white text-decoration-none">Contacto</a></li>
+            <li><a href="{% url 'contacto' %}" class="text-white text-decoration-none">Contacto</a></li>
             <li><a href="#" class="text-white text-decoration-none">Preguntas frecuentes</a></li>
           </ul>
         </div>
